--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,7 +23,10 @@ book:
     - capitulos/08BasesConocimiento.qmd
     - capitulos/09Visualizacion.qmd
     - capitulos/10Conclusiones.qmd
-    - capitulos/11Referencias.qmd    
+    - capitulos/11Referencias.qmd
+  site-url: https://ingeotec.github.io/PLN
+  repo-url: https://github.com/INGEOTEC/PLN
+  downloads: pdf             
 
 bibliography: references.bib
 title-block-banner: false
@@ -31,8 +34,11 @@ title-block-banner: false
 format:
   html:
     theme: cosmo
+    code-tools: true
+    echo: true
   pdf:
     documentclass: scrreprt
+    echo: false
 
 execute:
   freeze: auto
