--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,8 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip'
-      - run: pip install jupyter        
+      - run: pip install jupyter
+      - run: pip install evomsa    
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
