--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,7 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
       - run: pip install jupyter
+      - run: pip install -U scikit-learn
       - run: pip install evomsa    
 
       - name: Render and Publish
