--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,14 +18,21 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
       - run: quarto install tinytex
 
-      - name: Install Python and Dependencies
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-          cache: 'pip'
-      - run: pip install jupyter
-      - run: pip install -U scikit-learn
-      - run: pip install evomsa    
+    - name: Set up Python
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: test
+        auto-update-conda: true
+        python-version: ${{ matrix.python-version }}
+        channels: conda-forge
+        allow-softlinks: true
+        channel-priority: flexible
+        show-channel-urls: true	
+    - name: Install dependencies
+      run: |
+        conda install --yes pip
+        conda install --yes numpy scipy scikit-learn nltk evomsa jupyter
+        python -c "import nltk; nltk.download('stopwords')"
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
