--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           activate-environment: test
           auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
           channels: conda-forge
           allow-softlinks: true
           channel-priority: flexible
