--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,9 @@ name: Quarto Publish
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}    
     permissions:
       contents: write
     steps:
@@ -28,7 +31,6 @@ jobs:
           show-channel-urls: true
       - name: Install dependencies
         run: |
-          conda install --yes pip
           conda install --yes numpy scipy scikit-learn nltk evomsa jupyter
           python -c "import nltk; nltk.download('stopwords')"
       - name: Render and Publish
