--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash -l {0}    
+        shell: bash -el {0}    
     permissions:
       contents: write
     steps:
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-      - run: quarto install tinytex
+        with:
+          tinytex: true        
       - name: Set up Python
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -33,6 +34,7 @@ jobs:
         run: |
           conda install --yes numpy scipy scikit-learn nltk evomsa jupyter
           python -c "import nltk; nltk.download('stopwords')"
+          which python
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
