--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,6 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           tinytex: true
-          shell: bash -el {0}                
       - name: Set up Python
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -35,11 +34,10 @@ jobs:
         run: |
           conda install --yes numpy scipy scikit-learn nltk evomsa jupyter
           python -c "import nltk; nltk.download('stopwords')"
-          which python
-          cat ~/.bashrc
       - name: Render and Publish
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
+        run: |
+          git config --global user.email "mgraffg@ieee.org"
+          git config --global user.name "mgraffg"
+          quarto publish gh-pages .  --no-browser          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
