--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
           show-channel-urls: true
       - name: Install dependencies
         run: |
-          conda install --yes numpy scipy scikit-learn nltk evomsa jupyter
+          conda install --yes numpy scipy scikit-learn nltk evomsa jupyter wordcloud
           python -c "import nltk; nltk.download('stopwords')"
       - name: Render and Publish
         run: |
