--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,10 @@ book:
     - capitulos/11Referencias.qmd
   site-url: https://ingeotec.github.io/PLN
   repo-url: https://github.com/INGEOTEC/PLN
-  downloads: pdf             
+  downloads: pdf
+  page-footer:
+    left: |
+      [![](https://i.creativecommons.org/l/by-sa/4.0/80x15.png)](http://creativecommons.org/licenses/by-sa/4.0/) <br/> Esta obra está bajo una [Licencia Creative Commons Atribución-CompartirIgual 4.0 Internacional](http://creativecommons.org/licenses/by-sa/4.0/)             
 
 bibliography: references.bib
 title-block-banner: false
