--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,7 +29,7 @@ book:
   repo-url: https://github.com/INGEOTEC/PLN
   downloads: pdf
   page-footer:
-    left: |
+    right: |
       [![](https://i.creativecommons.org/l/by-sa/4.0/80x15.png)](http://creativecommons.org/licenses/by-sa/4.0/) <br/> Esta obra está bajo una [Licencia Creative Commons Atribución-CompartirIgual 4.0 Internacional](http://creativecommons.org/licenses/by-sa/4.0/)             
 
 bibliography: references.bib
