--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,9 +33,8 @@ jobs:
           show-channel-urls: true
       - name: Install dependencies
         run: |
-          conda install --yes numpy scipy scikit-learn nltk evomsa jupyter wordcloud pip
+          conda install --yes numpy scipy scikit-learn nltk evomsa jupyter wordcloud IngeoML
           python -c "import nltk; nltk.download('stopwords')"
-          pip install IngeoML
       - name: Render and Publish
         run: |
           git config --global user.email "mgraffg@ieee.org"
