--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,4 @@
-{"image":"mcr.microsoft.com/devcontainers/universal:2",
+{"image":"mcr.microsoft.com/devcontainers/universal:2-linux",
 "features": {
     "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
 }}
