--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,9 @@
 {"image":"mcr.microsoft.com/devcontainers/universal:2-linux",
 "features": {
-    "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
-}}
+    "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": 
+        {"installChromium": true, "installTinyTex": true, "version": "prerelease"},
+    "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": 
+        {"packages": "libnss3,libxss1,libasound2,libxshmfence-dev"}
+    },
+"postCreateCommand": "conda install --yes numpy scipy scikit-learn nltk evomsa jupyter wordcloud IngeoML pandas seaborn"
+}
